# reffie-onboarding-api

./: .gitignore  CLAUDE.md  DEPLOY.md  Taskfile.yml  alembic.ini  body.json  nixpacks.toml  pyproject.toml  railway.toml
.claude/: LESSONS.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 316c040a9103_add_hubspot_company_id_to_accounts.py  91bc8da8274e_create_accounts_pocs_checklist_state_tables.py  b7e2d4f1a9c3_add_archived_to_accounts.py  c9d1e2f3a4b5_add_upcoming_deals_table.py  de8ead4140ea_add_tech_stack_jsonb_to_accounts.py
scripts/: seed.py
src/reffie/: auth.py  config.py  constants.py  main.py  onboarding_flows.py
src/reffie/db/: __init__.py  session.py
src/reffie/hubspot/: auto_create.py  client.py  router.py  sync.py  tech_stack.py  upcoming_deals.py  webhook_sync.py  writeback.py
src/reffie/models/: __init__.py  account.py  checklist_item.py  poc.py  upcoming_deal.py
src/reffie/routers/: accounts.py  checklist.py  health.py  hubspot_webhook.py  pocs.py  upcoming_deals.py
src/reffie/schemas/: account.py  checklist.py  hubspot_webhook.py  poc.py  upcoming_deal.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_checklist.py  test_cors.py  test_health.py  test_hubspot_sync.py  test_hubspot_tech_stack.py  test_hubspot_tech_stack_writeback.py  test_hubspot_upcoming_deals.py  test_hubspot_webhook.py  test_hubspot_webhook_sync.py  test_hubspot_writeback.py  test_pocs.py  test_upcoming_deals.py
