[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reffie-onboarding-api"
version = "0.1.0"
description = "Reffie onboarding backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "google-auth[requests]>=2.53.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reffie"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "RUF", # ruff-specific
]
ignore = [
    "S101",   # use of assert (fine in tests)
    "ANN401", # Any is legitimate for external API response payloads
    "B008",   # Depends() in default args is the FastAPI DI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["reffie"]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=reffie --cov-report=term-missing"

[tool.coverage.run]
source = ["src/reffie"]
omit = ["tests/*"]
